<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/ic_home_black_24dp"
        android:backgroundTint="@color/green"
        android:title="@string/title_food" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_exercise"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_exercise" />

    <item
        android:id="@+id/navigation_reminders"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_reminders" />

</menu>