<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.exercise.ExerciseFragment">


    <ListView
        android:id="@+id/lv_exerciseList"
        android:layout_width="351dp"
        android:layout_height="327dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_exercise"
        android:layout_width="205dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/ExerciseType"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_duration"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/Duration"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_calories"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/CaloriesBurned"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_time"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/Time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="252dp"
        android:text="Add"
        android:backgroundTint="@color/green"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_viewAll_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="252dp"
        android:backgroundTint="@color/green"
        android:text="View All"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintStart_toEndOf="@+id/btn_add_exercise"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>